# releasekit

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
examples/: gitea.rs  github.rs  gitlab.rs
src/: client.rs  error.rs  filter.rs  lib.rs  model.rs  url.rs
src/platform/: gitea.rs  github.rs  gitlab.rs  mod.rs
tests/: gitea.rs  github.rs  gitlab.rs
