[package]
name = "releasekit"
version = "0.1.1"
edition = "2024"
rust-version = "1.93.1"
license = "MIT"
description = "Client-agnostic library for fetching releases from git forges"
keywords = ["github", "release", "forge"]
categories = ["api-bindings", "web-programming"]

[dependencies]
fast-glob = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ureq = { version = "3.3.0", optional = true }
urlencoding = "2.1.3"

[features]
ureq = ["dep:ureq"]
